# sliderule-atl24

./: .gitignore  CMakeLists.txt  Makefile  README.md
docker/: Dockerfile  conda-lock.yml  environment.yml  runner.py
endpoints/: atl24g2.lua  atl24kd.lua
package/: Atl24Writer.cpp  Atl24Writer.h  BlunderRunner.cpp  BlunderRunner.h  KdExperiment.cpp  KdExperiment.h  PluginFields.cpp  PluginFields.h  atl24.cpp  atl24.h
pytests/: conftest.py  test_atl24g2.py
selftests/: atl24_writer.lua
systests/: compare_v2_results.py
utils/: check_atl24_v2.py  check_atl24r2.py  gen_atl24_v2.py  gen_atl24_v2_xml.py  gen_atl24r2.py  gen_db.py  gen_metadata.py  get_atl24_granules.py  nsidc_monitor.py  nsidc_transfer.py  run_atl24d.py  run_kd_experiment.py
